--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,5 @@ jobs:
   include:
     - stage: "Good"                # naming the Tests stage
       name: "Good Tests"            # names the first Tests stage job
-      script: ./Good
-    - stage: ./Bad               
+      script: ./Pass
+    - stage: ./Fail
