--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,4 @@ jobs:
     - stage: "Good"                # naming the Tests stage
       name: "Good Tests"            # names the first Tests stage job
       script: ./Pass
-    - stage: ./Fail
+    - stage: ./java//Fail
