--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: java
+jdk:
+  - openjdk13
 
-jobs:
-  include:
-    - stage: "Good"                # naming the Tests stage
-      name: "Good Tests"            # names the first Tests stage job
-      script: ./test/java/Pass
-    - stage: ./test/java/Fail
+script: ./mvnw clean install
+
+notifications:
+  email: smorad@post.bgu.ac.il
