--- a/.github/workflows/maven.yaml
+++ b/.github/workflows/maven.yaml
@@ -3,15 +3,32 @@ name: Maven
 on: [push]
 
 jobs:
-  build:
 
-    runs-on: ubuntu-latest
+  test:
+    name: Unit Test
+    runs-on: ubuntu-18.04
 
     steps:
-    - uses: actions/checkout@v1
-    - name: Set up JDK 1.8
-      uses: actions/setup-java@v1
-      with:
-        java-version: 1.8
-    - name: Build with Maven
-      run: mvn package --file pom.xml
+      - uses: actions/checkout@v1
+      - name: Set up JDK  1.8
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
+      - name: Maven Package
+        run: mvn -B clean package -DskipTests
+      - name: Maven Verify
+        run: mvn -B clean verify
+
+# jobs:
+#   build:
+
+#     runs-on: ubuntu-latest
+
+#     steps:
+#     - uses: actions/checkout@v1
+#     - name: Set up JDK 1.8
+#       uses: actions/setup-java@v1
+#       with:
+#         java-version: 1.8
+#     - name: Build with Maven
+#       run: mvn package --file pom.xml
