--- a/.github/workflows/maven.yaml
+++ b/.github/workflows/maven.yaml
@@ -16,9 +16,9 @@ jobs:
           java-version: 1.8
       - name: Maven Package
         run: mvn -B clean package -DskipTests
-      - name: Maven Verify
-        run: mvn -B clean verify
-
+      - name: Maven Tets
+        run: mvn -B clean test
+        
 # jobs:
 #   build:
 
