--- a/.github/workflows/maven.yaml
+++ b/.github/workflows/maven.yaml
@@ -3,22 +3,24 @@ name: Maven
 on: [push]
 
 jobs:
-
-  test:
-    name: Unit Test
-    runs-on: ubuntu-18.04
-
+  run_tests:
+    runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
-      - name: Set up JDK  1.8
+      - name: Checkout the repository
+        uses: actions/checkout@v2
+      - name: Set up JDK 1.8
         uses: actions/setup-java@v1
         with:
           java-version: 1.8
-      - name: Maven Package
-        run: mvn -B clean package -DskipTests
-      - name: Maven Tets
-        run: mvn -B clean test
-        
+      - name: Cache Maven packages
+        uses: actions/cache@v2
+        with:
+          path: ~/.m2
+          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+          restore-keys: ${{ runner.os }}-m2
+      - name: Run tests with Maven
+        run: mvn -B test --file pom.xml
+
 # jobs:
 #   build:
 
