--- a/.github/workflows/maven.yaml
+++ b/.github/workflows/maven.yaml
@@ -20,6 +20,8 @@ jobs:
           restore-keys: ${{ runner.os }}-m2
       - name: Run tests with Maven
         run: mvn -B test --file pom.xml
+      - name: Man Fuck This Shit
+        run: echo help me out, help me out, this is not a dance
 
 # jobs:
 #   build:
