--- a/pom.xml
+++ b/pom.xml
@@ -16,5 +16,7 @@
         </dependency>
     </dependencies>
 
-
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
 </project>
