--- a/.github/workflows/maven.yaml
+++ b/.github/workflows/maven.yaml
@@ -18,19 +18,7 @@ jobs:
           path: ~/.m2
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
-      - name: Run tests with Maven
-        run: mvn -B test --file pom.xml
-
-# jobs:
-#   build:
-
-#     runs-on: ubuntu-latest
-
-#     steps:
-#     - uses: actions/checkout@v1
-#     - name: Set up JDK 1.8
-#       uses: actions/setup-java@v1
-#       with:
-#         java-version: 1.8
-#     - name: Build with Maven
-#       run: mvn package --file pom.xml
+      - name: Run --Fail test with Maven
+        run: mvn -B test --Fail pom.xml
+      - name: Run test --Pass with Maven
+          run: mvn -B test --Pass pom.xml
