--- a/.github/workflows/maven.yaml
+++ b/.github/workflows/maven.yaml
@@ -18,7 +18,5 @@ jobs:
           path: ~/.m2
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
-      - name: Run --Fail test with Maven
-        run: mvn -B test --Fail pom.xml
-      - name: Run test --Pass with Maven
-        run: mvn -B test --Pass pom.xml
+      - name: Run tests with Maven
+        run: mvn -B test --file pom.xml
